Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-06-04 [M] Release of cpg1.5.6 {GauGau}
2010-06-04 [B] Fixed query for album moderation group (thread ID 65312) {eenemeenemuu}
2010-06-04 [B] Fixed config value for path to ImageMagick when selecting GD during intallation (thread ID 65177) {eenemeenemuu}
2010-06-04 [A] Differentiate user registrations and admin user creations in access log file (thread ID 65298) {eenemeenemuu}
2010-06-04 [M] Removed cpg1.3.x theme upgrade guide, as a direct upgrade from cpg1.3.x to cpg1.5.x no longer is supported {GauGau}
2010-06-03 [B] Fixed log file entry on user registration/creation (thread ID 65290) {eenemeenemuu}
2010-06-03 [B] Fixed ip address dupes at various places (thread ID 65294) {eenemeenemuu}
2010-06-03 [B] Fixed issue when creating users (thread ID 64457) {eenemeenemuu}
2010-06-03 [B] Fixed issue when uploading plugins to windows driven galleries {eenemeenemuu}
2010-06-03 [B] Fixed typo that caused the display of the 'not supported version' message box (thread ID 65224) {eenemeenemuu}
2010-06-03 [O] Updated Czech language file (user contribution) {eenemeenemuu}
2010-06-02 [B] Fixed ip address dupes on stat_details.php (thread ID 65230) {eenemeenemuu}
2010-06-02 [B] Extended lang_byte_units array for some language files (thread ID 65231) {eenemeenemuu}
2010-06-02 [B] Fixed broken link (thread ID 65226) {eenemeenemuu}
2010-06-02 [M] Release of cpg1.5.4 as initial stable release for the public {GauGau}
2010-06-01 [M] Preparing the release of cpg1.5.4 {GauGau}
2010-06-01 [B] Fixed issue when selecting IM on installation (thread ID 65185) {eenemeenemuu}
2010-06-01 [B] Moved profile button for curve theme (thread ID 65204) {eenemeenemuu}